2018-11-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* tiff/port/snprintf.c Fix for older Microsoft Visual Studio

2018-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update in preparation for 1.3.31 release.

	* version.sh: Update library versioning in preparation for
	1.3.31 release.

	* NEWS.txt: Update news in preparation for 1.3.31 release.

2018-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkUsage): Document the benchmark
	command better.

2018-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): quantum is a
	pointer so it's value can not be usefully flushed.  Use a local
	variable and then update quantum pointer when done.

2018-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/*: Changed row_count tallying to use 'omp atomic' and
	status update to use 'omp flush' for progress and error
	indication.  This replaces most use of 'omp critical' for this
	purpose.  Changed some lumpy algorithms which were using 'static'
	scheduling to 'guided' scheduling due to observing better results.
	Also added prolific 'restrict' annotations where they were
	missing.

	* www/security.rst: Documented a PGP private key for file signing
	or private correspondence.

2018-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/authors.rst: Moved "Glenn Randers-Pehrson" and "Gregory J
	Wolfe" to the "Former Contributor" category.

2018-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Added many GCC function annotations in the libraries and coders.

2018-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use printf rather than echo to portably expand tab
	requests in configuration summary.

2018-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use pkg-config data as the initial choice when
	configuring for FreeType 2.0 and libxml-2.0.  Only fall back to